// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgramCertificateList /> Should render correctly 1`] = `
<div
  className="recipients"
>
  <span
    className="recepient__title"
  >
    Check the appropriate box or boxes to create the desired number of certificates. To create a certificate with no printed name, leave all boxes unchecked.
  </span>
  <div
    className="recipients-table-cont"
  >
    <table
      className="recipients-table"
    >
      <thead>
        <tr>
          <th
            className="recipients-table__checkbox"
          >
            <input
              checked={true}
              id="checkBoxHeader"
              onChange={[Function]}
              type="checkbox"
            />
          </th>
          <th
            className="recipients-table__class"
          >
            Classes/Students
          </th>
          <th
            className="recipients-table__grade"
          >
            Grade
          </th>
          <th
            className="recipients-table__lexile"
          >
            Lexile
          </th>
          <th
            className="recipients-table__r180level"
          >
            READ 180 Level
          </th>
          <th
            className="recipients-table__books"
          >
            Books Read
          </th>
          <th
            className="recipients-table__points"
          >
            Points Earned
          </th>
        </tr>
      </thead>
      <tbody
        className="recipients-table__body"
      />
    </table>
  </div>
</div>
`;

exports[`<ProgramCertificateList /> certificateInfo when there is no value 1`] = `
<div
  className="recipients"
>
  <span
    className="recepient__title"
  >
    Check the appropriate box or boxes to create the desired number of certificates. To create a certificate with no printed name, leave all boxes unchecked.
  </span>
  <div
    className="recipients-table-cont"
  >
    <table
      className="recipients-table"
    >
      <thead>
        <tr>
          <th
            className="recipients-table__checkbox"
          >
            <input
              checked={false}
              id="checkBoxHeader"
              onChange={[Function]}
              type="checkbox"
            />
          </th>
          <th
            className="recipients-table__class"
          >
            Classes/Students
          </th>
          <th
            className="recipients-table__grade"
          >
            Grade
          </th>
          <th
            className="recipients-table__lexile"
          >
            Lexile
          </th>
          <th
            className="recipients-table__r180level"
          >
            READ 180 Level
          </th>
          <th
            className="recipients-table__books"
          >
            Books Read
          </th>
          <th
            className="recipients-table__points"
          >
            Points Earned
          </th>
        </tr>
      </thead>
      <tbody
        className="recipients-table__body"
      />
    </table>
  </div>
</div>
`;

exports[`<ProgramCertificateList /> testing onCLick function onClick function to be called 1`] = `
<div
  className="recipients"
>
  <span
    className="recepient__title"
  >
    Check the appropriate box or boxes to create the desired number of certificates. To create a certificate with no printed name, leave all boxes unchecked.
  </span>
  <div
    className="recipients-table-cont"
  >
    <table
      className="recipients-table"
    >
      <thead>
        <tr>
          <th
            className="recipients-table__checkbox"
          >
            <input
              checked={false}
              id="checkBoxHeader"
              onChange={[Function]}
              type="checkbox"
            />
          </th>
          <th
            className="recipients-table__class"
          >
            Classes/Students
          </th>
          <th
            className="recipients-table__grade"
          >
            Grade
          </th>
          <th
            className="recipients-table__lexile"
          >
            Lexile
          </th>
          <th
            className="recipients-table__r180level"
          >
            READ 180 Level
          </th>
          <th
            className="recipients-table__books"
          >
            Books Read
          </th>
          <th
            className="recipients-table__points"
          >
            Points Earned
          </th>
        </tr>
      </thead>
      <tbody
        className="recipients-table__body"
      >
        <tr
          key="d0mv04d4fla89s0c8gr22mnj_2efa7f0"
        >
          <td
            className="recipients-table__checkinput"
          >
            <input
              checked={false}
              id="checkBox"
              onChange={[Function]}
              type="checkbox"
            />
          </td>
          <td
            className="recipients-table__classdata"
          >
            CA S44 Stage A Standalone
          </td>
          <td
            className="recipients-table__gradedata"
          >
            2
          </td>
          <td
            className="recipients-table__lexiledata"
          >
            N/A
          </td>
          <td
            className="recipients-table__r180leveldata"
          >
            N/A
          </td>
          <td
            className="recipients-table__booksdata"
          >
            N/A
          </td>
          <td
            className="recipients-table__pointsdata"
          >
            N/A
          </td>
        </tr>
        <tr
          key="srjrole2mqoolo95m4g5jldp_2efa7f0"
        >
          <td
            className="recipients-table__checkinput"
          >
            <input
              checked={false}
              id="checkBox"
              onChange={[Function]}
              type="checkbox"
            />
          </td>
          <td
            className="recipients-table__classdata"
          >
            CA S44 Stage B Standalone
          </td>
          <td
            className="recipients-table__gradedata"
          >
            9
          </td>
          <td
            className="recipients-table__lexiledata"
          >
            N/A
          </td>
          <td
            className="recipients-table__r180leveldata"
          >
            N/A
          </td>
          <td
            className="recipients-table__booksdata"
          >
            N/A
          </td>
          <td
            className="recipients-table__pointsdata"
          >
            N/A
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<ProgramCertificateList /> verify with the data certificateInfo returns only student data for Math Products 1`] = `
<div
  className="recipients"
>
  <span
    className="recepient__title"
  >
    Check the appropriate box or boxes to create the desired number of certificates. To create a certificate with no printed name, leave all boxes unchecked.
  </span>
  <div
    className="recipients-table-cont"
  >
    <table
      className="recipients-table"
    >
      <thead>
        <tr>
          <th
            className="recipients-table__checkbox"
          >
            <input
              checked={false}
              id="checkBoxHeader"
              onChange={[Function]}
              type="checkbox"
            />
          </th>
          <th
            className="recipients-table__class"
          >
            Classes/Students
          </th>
        </tr>
      </thead>
      <tbody
        className="recipients-table__body"
      >
        <tr
          key="d0mv04d4fla89s0c8gr22mnj_2efa7f0"
        >
          <td
            className="recipients-table__checkinput"
          >
            <input
              checked={false}
              id="checkBox"
              onChange={[Function]}
              type="checkbox"
            />
          </td>
          <td
            className="recipients-table__classdata"
          >
            CA S44 Stage A Standalone
          </td>
        </tr>
        <tr
          key="srjrole2mqoolo95m4g5jldp_2efa7f0"
        >
          <td
            className="recipients-table__checkinput"
          >
            <input
              checked={false}
              id="checkBox"
              onChange={[Function]}
              type="checkbox"
            />
          </td>
          <td
            className="recipients-table__classdata"
          >
            CA S44 Stage B Standalone
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<ProgramCertificateList /> verify with the data certificateInfo returns the table data 1`] = `
<div
  className="recipients"
>
  <span
    className="recepient__title"
  >
    Check the appropriate box or boxes to create the desired number of certificates. To create a certificate with no printed name, leave all boxes unchecked.
  </span>
  <div
    className="recipients-table-cont"
  >
    <table
      className="recipients-table"
    >
      <thead>
        <tr>
          <th
            className="recipients-table__checkbox"
          >
            <input
              checked={false}
              id="checkBoxHeader"
              onChange={[Function]}
              type="checkbox"
            />
          </th>
          <th
            className="recipients-table__class"
          >
            Classes/Students
          </th>
          <th
            className="recipients-table__grade"
          >
            Grade
          </th>
          <th
            className="recipients-table__lexile"
          >
            Lexile
          </th>
          <th
            className="recipients-table__r180level"
          >
            READ 180 Level
          </th>
          <th
            className="recipients-table__books"
          >
            Books Read
          </th>
          <th
            className="recipients-table__points"
          >
            Points Earned
          </th>
        </tr>
      </thead>
      <tbody
        className="recipients-table__body"
      >
        <tr
          key="d0mv04d4fla89s0c8gr22mnj_2efa7f0"
        >
          <td
            className="recipients-table__checkinput"
          >
            <input
              checked={false}
              id="checkBox"
              onChange={[Function]}
              type="checkbox"
            />
          </td>
          <td
            className="recipients-table__classdata"
          >
            CA S44 Stage A Standalone
          </td>
          <td
            className="recipients-table__gradedata"
          >
            2
          </td>
          <td
            className="recipients-table__lexiledata"
          >
            N/A
          </td>
          <td
            className="recipients-table__r180leveldata"
          >
            N/A
          </td>
          <td
            className="recipients-table__booksdata"
          >
            N/A
          </td>
          <td
            className="recipients-table__pointsdata"
          >
            N/A
          </td>
        </tr>
        <tr
          key="srjrole2mqoolo95m4g5jldp_2efa7f0"
        >
          <td
            className="recipients-table__checkinput"
          >
            <input
              checked={false}
              id="checkBox"
              onChange={[Function]}
              type="checkbox"
            />
          </td>
          <td
            className="recipients-table__classdata"
          >
            CA S44 Stage B Standalone
          </td>
          <td
            className="recipients-table__gradedata"
          >
            9
          </td>
          <td
            className="recipients-table__lexiledata"
          >
            N/A
          </td>
          <td
            className="recipients-table__r180leveldata"
          >
            N/A
          </td>
          <td
            className="recipients-table__booksdata"
          >
            N/A
          </td>
          <td
            className="recipients-table__pointsdata"
          >
            N/A
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<ProgramCertificateList /> verify with the data verify toggle row selection 1`] = `
<div
  className="recipients"
>
  <span
    className="recepient__title"
  >
    Check the appropriate box or boxes to create the desired number of certificates. To create a certificate with no printed name, leave all boxes unchecked.
  </span>
  <div
    className="recipients-table-cont"
  >
    <table
      className="recipients-table"
    >
      <thead>
        <tr>
          <th
            className="recipients-table__checkbox"
          >
            <input
              checked={false}
              id="checkBoxHeader"
              onChange={[Function]}
              type="checkbox"
            />
          </th>
          <th
            className="recipients-table__class"
          >
            Classes/Students
          </th>
          <th
            className="recipients-table__grade"
          >
            Grade
          </th>
          <th
            className="recipients-table__lexile"
          >
            Lexile
          </th>
          <th
            className="recipients-table__r180level"
          >
            READ 180 Level
          </th>
          <th
            className="recipients-table__books"
          >
            Books Read
          </th>
          <th
            className="recipients-table__points"
          >
            Points Earned
          </th>
        </tr>
      </thead>
      <tbody
        className="recipients-table__body"
      >
        <tr
          key="d0mv04d4fla89s0c8gr22mnj_2efa7f0"
        >
          <td
            className="recipients-table__checkinput"
          >
            <input
              checked={false}
              id="checkBox"
              onChange={[Function]}
              type="checkbox"
            />
          </td>
          <td
            className="recipients-table__classdata"
          >
            CA S44 Stage A Standalone
          </td>
          <td
            className="recipients-table__gradedata"
          >
            2
          </td>
          <td
            className="recipients-table__lexiledata"
          >
            N/A
          </td>
          <td
            className="recipients-table__r180leveldata"
          >
            N/A
          </td>
          <td
            className="recipients-table__booksdata"
          >
            N/A
          </td>
          <td
            className="recipients-table__pointsdata"
          >
            N/A
          </td>
        </tr>
        <tr
          key="srjrole2mqoolo95m4g5jldp_2efa7f0"
        >
          <td
            className="recipients-table__checkinput"
          >
            <input
              checked={false}
              id="checkBox"
              onChange={[Function]}
              type="checkbox"
            />
          </td>
          <td
            className="recipients-table__classdata"
          >
            CA S44 Stage B Standalone
          </td>
          <td
            className="recipients-table__gradedata"
          >
            9
          </td>
          <td
            className="recipients-table__lexiledata"
          >
            N/A
          </td>
          <td
            className="recipients-table__r180leveldata"
          >
            N/A
          </td>
          <td
            className="recipients-table__booksdata"
          >
            N/A
          </td>
          <td
            className="recipients-table__pointsdata"
          >
            N/A
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<ProgramCertificateList /> with data in the array onClick function to be called 1`] = `
<div
  className="recipients"
>
  <span
    className="recepient__title"
  >
    Check the appropriate box or boxes to create the desired number of certificates. To create a certificate with no printed name, leave all boxes unchecked.
  </span>
  <div
    className="recipients-table-cont"
  >
    <table
      className="recipients-table"
    >
      <thead>
        <tr>
          <th
            className="recipients-table__checkbox"
          >
            <input
              checked={false}
              id="checkBoxHeader"
              onChange={[Function]}
              type="checkbox"
            />
          </th>
          <th
            className="recipients-table__class"
          >
            Classes/Students
          </th>
          <th
            className="recipients-table__grade"
          >
            Grade
          </th>
          <th
            className="recipients-table__lexile"
          >
            Lexile
          </th>
          <th
            className="recipients-table__r180level"
          >
            READ 180 Level
          </th>
          <th
            className="recipients-table__books"
          >
            Books Read
          </th>
          <th
            className="recipients-table__points"
          >
            Points Earned
          </th>
        </tr>
      </thead>
      <tbody
        className="recipients-table__body"
      >
        <tr
          key="d0mv04d4fla89s0c8gr22mnj_2efa7f0"
        >
          <td
            className="recipients-table__checkinput"
          >
            <input
              checked={false}
              id="checkBox"
              onChange={[Function]}
              type="checkbox"
            />
          </td>
          <td
            className="recipients-table__classdata"
          >
            CA S44 Stage A Standalone
          </td>
          <td
            className="recipients-table__gradedata"
          >
            2
          </td>
          <td
            className="recipients-table__lexiledata"
          >
            3
          </td>
          <td
            className="recipients-table__r180leveldata"
          >
            2
          </td>
          <td
            className="recipients-table__booksdata"
          >
            2
          </td>
          <td
            className="recipients-table__pointsdata"
          >
            2
          </td>
        </tr>
        <tr
          key="srjrole2mqoolo95m4g5jldp_2efa7f0"
        >
          <td
            className="recipients-table__checkinput"
          >
            <input
              checked={false}
              id="checkBox"
              onChange={[Function]}
              type="checkbox"
            />
          </td>
          <td
            className="recipients-table__classdata"
          >
            CA S44 Stage B Standalone
          </td>
          <td
            className="recipients-table__gradedata"
          >
            9
          </td>
          <td
            className="recipients-table__lexiledata"
          >
            1
          </td>
          <td
            className="recipients-table__r180leveldata"
          >
            1
          </td>
          <td
            className="recipients-table__booksdata"
          >
            1
          </td>
          <td
            className="recipients-table__pointsdata"
          >
            1
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
